@@ -1,3 +1,8 @@
+2008-06-19  Noam Lampert  <noaml@mainsoft.com>
+
+	* HyperLink.cs: Fix bug in ImageUrl when webform is in subfolder. Don't use image that 
+	  not in child collection 
+
 2008-03-12  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* AutoGeneratedField.cs, CheckBoxField.cs: fixed OnDataBindField,
